--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,75 @@
-botocor
-boto3
-deepspeed==0.3.9+59e4dbb
-filelock
-scipy
-nltk
-regex
-tqdm
-torch_scatter
-matplotlib
-mpi4py
-pandas
-requests
-sentencepiece
-ftfy
-langdetect
-lsh
-scikit_learn
-tensorboardX
-termcolor
-tldextract
-transformers
+Package            Version
+------------------ -------------------
+apex               0.1
+bitarray           2.0.0
+boto3              1.17.53
+botocore           1.20.53
+certifi            2020.12.5
+chardet            4.0.0
+click              7.1.2
+cycler             0.10.0
+dataclasses        0.6
+decorator          4.4.2
+deepspeed          0.3.9
+fastBPE            0.1.0
+filelock           3.0.12
+ftfy               6.0.1
+future             0.18.2
+idna               2.10
+importlib-metadata 4.0.0
+jellyfish          0.8.2
+jmespath           0.10.0
+joblib             1.0.1
+kiwisolver         1.3.1
+langdetect         1.0.8
+lsh                0.1.2
+matplotlib         3.4.1
+mkl-fft            1.3.0
+mkl-random         1.1.1
+mkl-service        2.3.0
+mpi4py             3.0.3
+networkx           2.5.1
+ninja              1.10.0.post2
+nltk               3.6.1
+numpy              1.19.2
+olefile            0.46
+packaging          20.9
+pandas             1.2.4
+Pillow             8.2.0
+pip                21.0.1
+portalocker        2.0.0
+protobuf           3.15.8
+pyparsing          2.4.7
+python-dateutil    2.8.1
+pytz               2021.1
+regex              2021.4.4
+requests           2.25.1
+requests-file      1.5.1
+s3transfer         0.3.7
+sacrebleu          1.5.1
+sacremoses         0.0.45
+scikit-learn       0.24.1
+scipy              1.6.2
+segtok             1.5.10
+sentencepiece      0.1.95
+setuptools         52.0.0.post20210125
+six                1.15.0
+subword-nmt        0.3.7
+tabulate           0.8.9
+tensorboardX       1.8
+termcolor          1.1.0
+threadpoolctl      2.1.0
+tldextract         3.1.0
+tokenizers         0.10.2
+torch              1.7.0
+torch-scatter      2.0.6
+torchaudio         0.7.0a0+ac17b64
+torchvision        0.8.0
+tqdm               4.60.0
+transformers       4.5.1
+typing-extensions  3.7.4.3
+urllib3            1.26.4
+wcwidth            0.2.5
+wheel              0.36.2
+yake               0.4.8
+zipp               3.4.1
